--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
     "php": ">=5.6.0"
   },
   "autoload": {
+  },
+  "scripts": {
+    "dev-update": [
+      "@composer update -d -d=html_to_PhpWord/phpword/"
+    ]
   }
 }
