--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "php": ">=5.6.0"
   },
   "autoload": {
+    "psr-4": {
+      "htmltodocx": "html_to_PhpWord/"
+    }
   },
   "scripts": {
     "dev-update": [
